<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="internal_storage" translatable="false">Internal storage</string>
    <string name="app_name">Little Bo-Peep</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hint_email" translatable="false">Username</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_name" translatable="false">Fullname</string>
    <string name="btn_login" translatable="false">LOGIN</string>
    <string name="logout" translatable="false">LogOut</string>
    <string name="desc_list_item_icon" translatable="false">Item Icon</string>
    <string name="Username" translatable="false">Username</string>
    <string name="Logo">Logo</string>
    <string name="File">File</string>
    <string name="BackBtn">Back</string>
    <string name="Password" translatable="false">Password</string>
    <string name="SignInBtnTxt" translatable="false">SignIn</string>
    <string name="Forgot_PasswordTxt">Forgot Password?</string>
    <string name="FooterTxt">Powered by SchoolEduCare</string>
    <string name="Select_ClassTxt" translatable="false">Select Class:</string>
    <string name="Select_DivTxt" translatable="false">Select Div:</string>
    <string name="Choose_Existing_GalleryTxt">Choose Existing Gallery:</string>
    <string name="Add_PhotosTxt">Add Photos:</string>
    <string name="Choose_FileTxt">Choose File</string>
    <string name="No_file_chosenTxt" translatable="false">No file chosen</string>
    <string name="Add_InfoTxt">Add Info:</string>
    <string name="SubmitBtnTxt" translatable="false"> Submit </string>
    <string name="InstructionTxt1">[only .jpeg,.png,.gif files are supported..]</string>
    <string name="InstructionTxt2">[You can upload 10 galleries per class with max 10 photos each..]</string>
    <string name="DateTxt">Date:</string>
    <string name="Select_SubjectTxt" translatable="false">Select Subject:</string>
    <string name="Assignment_DescriptionTxt">Classwork Description:</string>
    <string name="Assignment_DescriptionLeb">Classwork Description</string>
    <string name="Attach_FileTxt">Attach File:</string>
    <string name="Submission_DateTxt" translatable="false">Given Date:</string>
    <string name="Submission_DateLeb" translatable="false">Given Date</string>
    <string name="Calender">Calender</string>
    <string name="SemisterTxt1" translatable="false">Semister I</string>
    <string name="SemisterTxt2" translatable="false">Semister II</string>
    <string name="Roll_NoTxt" translatable="false">Roll No.</string>
    <string name="abc_A" translatable="false">A</string>
    <string name="abc_H" translatable="false">HD</string>
    <string name="abc_P" translatable="false">P</string>
    <string name="abc_Present" translatable="false">Present</string>
    <string name="abc_gotoschool" translatable="false">Go To School</string>
    <string name="Student_First_NameTxt" translatable="false">Student First Name</string>
    <string name="Student_Last_NameTxt" translatable="false"> Student Last Name</string>
    <string name="Attendance_DaysTxt">Attendance Days</string>
    <string name="No.of_Days_PresentTxt" translatable="false"> No.of Days Present</string>
    <string name="No.of_Days_AbsentTxt" translatable="false"> No.of Days Absent</string>
    <string name="No.of_Days_HalfDaysTxt" translatable="false">No.of Days Half Days</string>
    <string name="Student_ListTxt" translatable="false">Student List</string>
    <string name="Select_StudentTxt" translatable="false">Select Student</string>
    <string name="AdminBtnTxt">Admin</string>
    <string name="ParentBtnTxt" translatable="false">Parent</string>
    <string name="StudentBtnTxt" translatable="false">Student</string>
    <string name="StudentNameTxt" translatable="false">Name</string>
    <string name="ReplyBtnTxt" translatable="false">  Send  </string>
    <string name="CancelBtnTxt">Cancel</string>
    <string name="OkBtnTxt" translatable="false">Ok</string>
    <string name="Gallery_NameTxt">Gallery Name</string>
    <string name="FirstNameTxt">Member Name   </string>
    <string name="LastNameTxt">Last Name   </string>
    <string name="AddressTxt">Address   </string>
    <string name="Phone_NoTxt" translatable="false">Phone No   </string>
    <string name="Mobile_NoTxt">Mobile No   </string>
    <string name="EmailTxt">Email   </string>
    <string name="QualificationTxt" translatable="false">Qualification   </string>
    <string name="HobbiesTxt">Hobbies   </string>
    <string name="Teaching_SubTxt" translatable="false">Teaching Sub</string>
    <string name="Change_SubjectsTxt">Change Subjects</string>
    <string name="ModifyBtnTxt">Modify</string>
    <string name="Create_New_GalleryTxt">Create New Gallery:</string>
    <string name="AttendenceTxt">  Attendence  </string>
    <string name="RemarksTxt" translatable="false">Remarks</string>
    <string name="GenderTxt">Gender   :</string>
    <string name="Date_of_BirthTxt">Date of Birth   :</string>
    <string name="ClassTxt">Class   :</string>
    <string name="DivTxt">Div   :</string>
    <string name="HouseTxt"> House   :</string>
    <string name="NationalityTxt">Nationality   :</string>
    <string name="IllnessTxt">Illness   :</string>
    <string name="Parent_NameTxt" translatable="false">Parent Name   :</string>
    <string name="dialog_title" translatable="false">Little Bo-Peep - Alert Message</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="remberMe" translatable="false"> Remember me</string>
    <string name="takephoto" translatable="false">Take Photo</string>
    <string name="Username_cannot_be_empty" translatable="false">Username cannot be empty </string>
    <string name="Password_cannot_be_empty" translatable="false">Password cannot be empty </string>
    <string name="Incorrect_Username_Password">Incorrect Username/Password </string>
    <string name="please_check_your_internet_connection" translatable="false">Please Check Your Internet Connection</string>

    <string name="abc_birthday" translatable="false"> BirthDay This Month </string>
    <string name="abc_to" translatable="false">To:</string>
    <string name="abc_teacher" translatable="false">Teacher</string>
    <string name="abc_student" translatable="false">Student</string>
    <string name="abc_roll_no" translatable="false">Roll No.</string>
    <string name="abc_name" translatable="false">Name</string>
    <string name="abc_remark" translatable="false">Remark</string>
    <string name="abc_start_date" translatable="false">Start Date</string>
    <string name="abc_end_date" translatable="false">End date</string>
    <string name="abc_get_atendance_details" translatable="false">Get Attendance Details</string>
    <string name="abc_parent" translatable="false">Parent</string>
    <string name="abc_subject" translatable="false">Subject:</string>
    <string name="abc_announcement" translatable="false">Announcement:</string>
    <string name="abc_submit" translatable="false">Submit</string>
    <string name="abc_teacher_name" translatable="false">Teacher Name:</string>
    <string name="abc_select_class" translatable="false">Select Class</string>
    <string name="abc_select_child" translatable="false">Select Child:</string>
    <string name="abc_gallery_name" translatable="false">Gallery</string>
    <string name="given_on" translatable="false">Given On</string>
    <string name="student_name" translatable="false">Student Name</string>
    <string name="subject" translatable="false">Subject</string>
    <string name="submit_on" translatable="false">Submit On</string>
    <string name="description" translatable="false">Description</string>
    <string name="abc_description" translatable="false">Description</string>
    <string name="abc_select_week" translatable="false">Select Week</string>
    <string name="abc_select_city" translatable="false">Select City</string>
    <string name="abc_select_school" translatable="false">Select School</string>
    <string name="details" translatable="false">Details</string>
    <!-- Nav Drawer Menu Items -->
   <!-- <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>-->

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <!--
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
        -->
    </array>

</resources>