<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/content_page"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/textView1"
            android:text=""
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/Select_ClassTxt"
            android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/spinnerClass"
            android:layout_width="@dimen/Spinner_Width"
            android:layout_height="@dimen/Spinner_Height" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Select_SubjectTxt"
            android:textSize="@dimen/font_size" />

        <Spinner
            android:id="@+id/spinnerSubject"
            android:layout_width="@dimen/Spinner_Width"
            android:layout_height="@dimen/Spinner_Height" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textAss_Dec"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/Assignment_DescriptionTxt"
            android:textSize="@dimen/font_size" />

        <EditText
            android:id="@+id/assignmentDes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:gravity="top|left"
            android:layout_marginLeft="3dp"
            android:textSize="@dimen/font_size">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/Attach_FileTxt"
            android:textSize="@dimen/font_size" />

        <Button
            android:id="@+id/ChooseBtn"
            android:layout_width="wrap_content"
            android:layout_height="25dp"

            android:background="@drawable/positive_buttons"
            android:text="@string/Choose_FileTxt"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/Button_text_size" />

        <TextView
            android:id="@+id/textfilename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/No_file_chosenTxt"
            android:textSize="@dimen/Text_size_footer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/Submission_DateTxt"
            android:textSize="@dimen/font_size" />

        <EditText
            android:id="@+id/submissionDate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/Reply_EditText_height"
            android:background="@drawable/edit_text_bg"
            android:editable="false"
            android:ems="10"
            android:paddingLeft="3dp"
            android:textSize="@dimen/font_size"></EditText>

        <ImageView
            android:id="@+id/calender"
            android:layout_width="@dimen/EditText_height"
            android:layout_height="@dimen/EditText_height"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/Calender"
            android:src="@drawable/calender_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/SubmitBtn"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="165dp"
            android:background="@drawable/positive_buttons"
            android:text="@string/SubmitBtnTxt"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/Button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#336E7B"
        android:gravity="center_vertical"
        android:weightSum="100">

        <TextView
            android:id="@+id/textAssignment"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center_horizontal"
            android:text="@string/Assignment_DescriptionLeb"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/textFile"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="34"
            android:gravity="center_horizontal"
            android:text="@string/File"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_size" />

        <TextView
            android:id="@+id/textSubmissionDate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:gravity="center_horizontal"
            android:text="@string/Submission_DateLeb"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="1"
        android:scrollbars="vertical">

        <ListView
            android:id="@+id/assignmentList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ></ListView>
    </LinearLayout>




</LinearLayout>